public/scss/_article.scss
body.closed .wrapper {
  left: 16px;
  @include break(med) {
    left: 11px;
  }
}

.wrapper {
  padding: 5rem 0 0 7rem;
  position: relative;
  left: 264px;
  @include break(large) {
    padding: 1.5rem 4rem;
  }
  @include break(med) {
    padding: 4rem 1rem;
  }

  h2 {
    font-size: 4.5rem;
    font-style: italic;
    font-weight: 800;
    color: $grey-med;
    margin: 0 0 2rem;
    @include break(x-large) {
      font-size: 3.5rem;
    }
    @include break(large) {
      font-size: 3rem;
    }
    @include break(med) {
      font-size: 2.5rem;
    }
    @include break(sm) {
      font-size: 1.5rem;
    }
  }

  h1 {
    font-weight: 600;
    font-size: 12rem;
    line-height: 12rem;
    margin: 0 0 2rem;
    @include break(x-large) {
      font-size: 10.5rem;
      line-height: 10.5rem;
    }
    @include break(large) {
      font-size: 8rem;
      line-height: 8rem;
    }
    @include break(med) {
      font-size: 6rem;
      line-height: 6rem;
    }
    @include break(sm) {
      font-size: 5rem;
      line-height: 5rem;
      margin: 0.5rem 0;
    }
  }

  p {
    padding: 0.5rem 0;
    max-width: 30rem;
    width: 98%;
    color: #333;
    @include break(x-large) {
      font-size: 1.2rem;
      max-width: 32rem;
    }
    @include break(sm) {
      font-size: 1rem;
    }
  }

  a {
    background: lighten($accent-red, 30%);
    border: 1px dotted lighten($accent-red, 25%);
    color: #444;
    text-decoration: none;
    display: inline-block;
    padding: 0.2rem 0.3rem;

    &:hover {
      color: #666;
    }
  }
}

